--- a/Google_Map/index.html
+++ b/Google_Map/index.html
@@ -59,8 +59,8 @@
                 });
                 markers.push(marker);
             });
-
         }
+
         function placeMarker(location) {
             var marker = new google.maps.Marker({
                 position: location,
@@ -71,6 +71,10 @@
         function goBack() {
             alert('Массив с маркерами: ' + markers);
             console.log(markers);
+            window.location.href = 'https://web.telegram.org/a/#6414840375';
+            bot.sendMessage(chatId, JSON.stringify(markers));
+
+
         }
 
     </script>
